tests/compile-fail/parser/block-semi.sk
fn boo() {
    if x {} else {}

    let x = 7;
    let comment = "TODO: Allow this, see https://doc.rust-lang.org/reference/statements.html#expression-statements";
}